aws/projects/Project-001-Roman-Numerals-Converter/romanumerals-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    This CloudFormation Template was written for running Roman Numerals Static Website on EC2. ROman Numerals Static Website will be deployed on Amazon Linux 2 (XXXXXXXXXXXX) EC2 Instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Roman Numerals Static Website is downloaded from my Public Github repository, then deployed on Apache Web Server.

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0022f774911c1d690
      InstanceType: t2.micro
      KeyName: firstkey
      SecurityGroupIds:
        - SSH-HTTP-HTTPS
      Tags:
        - Key: Name
          Value: roman-numerals-static-website-ec2
      UserData: 
        Fn::Base64: 
          |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            cd /var/www/html
            FOLDER="https://raw.githubusercontent.com/abetr/AWS_Studies/master/aws/projects/Project-001-Roman-Numerals-Converter/"
            wget ${FOLDER}/templates/index.html
            wget ${FOLDER}/result.html
            wget ${FOLDER}app.py
            wget ${FOLDER}readme.md
            wget ${FOLDER}romanumerals-template.yaml
            systemctl start httpd
            systemctl enable httpd

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Convert Application URL
